--- a/appList.html
+++ b/appList.html
@@ -33,7 +33,7 @@
 <div class="MsoNormal">
     
     <ul>
-      <a-app1 title="https://800aa.co/wmc-ams/api/app/access?appId=1652594634712551424&test=true"><i title="Mega Ace Slots-2023 newyorkers"></i></a-app1>
+      <a-app1 title="   "><i title="Mega Ace Slots-2023 newyorkers"></i></a-app1>
      
     </ul>
 </div>
